# monk-seal-modelling

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: lint_typecheck_test.yml  pyrefly.yml  test.yml
docs/: copernicus_data_discovery.md  model_parameters.md  seal_agent_documentation.md  sleeping_bug_report.md  visualization_guide.md
docs/articles/: article_01_copernicus_data_ingestion.md  article_02_notebooklm_research_integration.md  article_03_keeping_digital_seals_alive.md
docs/diagrams/: seal_state_machine.excalidraw
notebooks/: explore.py
notebooks/__marimo__/session/: explore.py.json
src/: download_tidal_data.py  interactive_agent.py  main.py
src/analysis/: analyze_long_run.py  analyze_tidal_data.py
src/data_ingestion/: copernicus_manager.py  discover_datasets.py  download_data.py  inspect_catalog.py  ranker.py  test_discovery_features.py  test_metadata_discovery.py
src/simulation/: agent_worker.py  run_real_long.py  simulation.py
src/simulation/agents/: config.py  movement.py  seal.py
src/simulation/environment/: environment.py  utils.py
src/visualization/: __init__.py  animate_seal_behavior.py  animate_simulation.py  animate_weather_layers.py  animate_weather_tides.py  app.py  basic_plot.py  config.py  data_loader.py  plot_depth_map.py  seal_animator.py  visualize_data_layers.py  weather_visualizer.py
tests/: conftest.py
tests/unit/: test_copernicus_manager.py  test_data_loader.py  test_dataset_discovery.py  test_download.py  test_environment.py  test_movement.py  test_seal_fsm.py  test_simulation.py  test_visualization_config.py
