[project]
name = "monkmodelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "copernicusmarine>=2.2.5",
    "dash>=3.3.0",
    "dask>=2025.12.0",
    "duckdb>=1.4.3",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "pandas>=2.2.2,<2.3",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "xarray>=2025.12.0",
]
